# SQL-AGENT

./: .env.example  .env.local  .gitignore  .mcp.json  ARQUITECTURA_SQL_AGENT.md  CLAUDE.md  DOCS.md  VERCEL_AI_SDK.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  Dockerfile  README.md  check_db.py  langgraph.json  pyproject.toml  requirements.txt  run_server.py  test_memory.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  clarification_agent.py  data_agent.py  intent_router.py  presentation_agent.py
backend/app/api/: __init__.py  v1_chat.py
backend/app/charts/: __init__.py  catalog.py
backend/app/db/: __init__.py  supabase_client.py
backend/app/graphs/: __init__.py  cache.py  insight_graph.py  insight_graph_v2.py
backend/app/memory/: __init__.py  chat_memory.py  checkpointer.py  postgres_memory.py  supabase_memory.py  supabase_store.py
backend/app/observability/: __init__.py  langsmith.py
backend/app/prompts/: __init__.py  ultrathink.py
backend/app/schemas/: __init__.py  agent_state.py  dashboard.py  intent.py  payload.py
backend/app/sql/: __init__.py  allowlist.py  schema_docs.py  schema_registry.py
backend/app/tools/: __init__.py
backend/app/utils/: date_parser.py  logger.py  robust_parser.py  sql_validator.py
backend/data/: schema_snapshot.json
backend/migrations/: 001_memory_tables.sql  002_checkpoints.sql
backend/scripts/: __init__.py  final_check.py  refresh_schema.py  run_migration.py  verify_setup.py
backend/tests/: __init__.py  test_contracts.py  test_sql_safety.py
(+43 files in other folders)
