[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-agent"
version = "2.5.0"
description = "SQL Agent with LangGraph - Multi-Agent Analytics Assistant"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.2.60,<0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary,pool]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlglot>=25.0.0",
    "structlog>=24.1.0",
    "langsmith>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
